Removed metadata repository, attached file checksum in s3 metadata